fix spacing and line on item card

--- a/source/default/_patterns/00-protons/legacy/css/components/UTC-custom-blocks/_utclib_item_card.css
+++ b/source/default/_patterns/00-protons/legacy/css/components/UTC-custom-blocks/_utclib_item_card.css
@@ -88,12 +88,12 @@ h2:first-child {
 }
 
 .utc-item-card__content {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .utc-item-card__action-container--line {
-  border-top: 2px solid #c0c9d0;
-  padding-top: 1.25rem;
+  border-top: 1px solid #c0c9d0;
+  padding-top: 0.75rem;
 }
 
 .utc-item-card__action-container--gray-bg {
